testcases/semantic/valid/if3.rs
fn main() {
    let a: i32 = if (true) { 2 } else { 4 };
}
